// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders with ellipsis after page 1 and before last page 1`] = `
<nav
  className="d-flex justify-content-center"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Prev
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        1
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        6
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        7
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        8
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        9
      </span>
    </li>
    <li
      className="page-item active"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        10
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        11
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        12
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        13
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        14
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        25
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Next
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Pagination renders with ellipsis only after page 1 1`] = `
<nav
  className="d-flex justify-content-center"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Prev
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        1
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        17
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        18
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        19
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        20
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        21
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        22
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        23
      </span>
    </li>
    <li
      className="page-item active"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        24
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        25
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Next
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Pagination renders with ellipsis only before last page 1`] = `
<nav
  className="d-flex justify-content-center"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item disabled no-pointer-events"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Prev
      </span>
    </li>
    <li
      className="page-item active"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        1
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        2
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        3
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        4
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        5
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        6
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        7
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        8
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        9
      </span>
    </li>
    <li
      className="page-item disabled"
    >
      <span
        className="page-link"
      >
        ...
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        25
      </span>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <span
        className="page-link"
      >
        Next
      </span>
    </li>
  </ul>
</nav>
`;
